# client-server-signer

./: .gitignore  README.md  Taskfile.yaml
client-java/: build.gradle
client-java/src/main/java/com/sigv4aSigning/: Server.java  SigV4Sign.java
client-java/src/test/java/aws/samples/sigv4a/: SigV4SignTest.java
client-js/: main.js  package-lock.json  package.json  server.js  sigv4_sign.js
client-python/: main.py  requirements.txt  server.py  sigv4_sign.py
client-rust/: Cargo.toml
client-rust/src/: main.rs
server/: credential.go  go.mod  go.sum  main.go  sign.go
