[package]
name = "client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
aws-config = "1.1.7"
aws-credential-types = "1.1.7"
aws-sigv4 = "1.1.7"
http = "1.1.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ['json'] }
serde_json = "1.0.114"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
